--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,7 @@ a {
 
 html, body {
   overflow: hidden;
-  font-family: 'moon 2.0';
+  font-family:'Orbitron', sans-serif;
   font-size: 2vh;
   letter-spacing: .1em;
 }
