--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ body, html {
     left: 50%;
     z-index:2;
     transform: translate(-50%, -50%);
-    color: rgb(230, 245, 243);
+    color: #F5F3E6;
     font-family: speck;
     font-size: 7vh;
     padding-left: 10vh;
@@ -49,7 +49,7 @@ body, html {
     0 0 150px #0ff;
 }
 a {
-  color: rgb(230, 245, 243);
+  color: #F5F3E6;
   text-decoration: none;
 }
 
@@ -58,8 +58,8 @@ a {
 html, body {
   overflow: hidden;
   font-family:'Orbitron', sans-serif;
-  font-size: 2vh;
-  letter-spacing: .1em;
+  font-size: 1.6vh;
+  letter-spacing: .3em;
 }
 
 .glow, .scifiUI:hover h1, .scifiUI:hover ul li {
